# HeadLM

./: .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  setup.py
cmake/: third_party.cmake
comm_backend/: CMakeLists.txt  CpuBackend.cpp  CpuBackend.hpp  HeadLmProcessGroup.cpp  HeadLmProcessGroup.h  HeadLmProcessGroup.hpp  HeadLmProcessGroupTest.cpp
comm_backend/adapter/: CMakeLists.txt  CorexAdapter.cpp  CorexAdapter.hpp  CpuBackend.cpp  CpuBackend.hpp  README.txt
comm_backend/head_ccl/: CMakeLists.txt
comm_backend/head_ccl/transport/: README.txt  roce.cpp
comm_backend/utils/: device.cpp  device.hpp
python/test/: single_machine_multi_process_comm_test.py
python/test/multi_node/: send_recv_test.py
python/utils/: check_pytorch_backends.py
